- added windowsill for 3-4 building - fixed page logo on small laptops

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -25,3 +25,9 @@
 a {
     color: #6cc14a;
 }
+
+@media only screen and (min-width: 1200px) {
+    .homeContainer .homeWrapper .projectLogo {
+        padding: 2em 30px 4em;
+    }
+}
